# caldir-provider-proton

./: AGENTS.md  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: release.yml
src/: api.rs  auth.rs  calendar.rs  constants.rs  content.rs  keys.rs  main.rs  mapping.rs  remote_config.rs  session.rs
src/commands/: connect.rs  create_event.rs  delete_event.rs  list_calendars.rs  list_events.rs  update_event.rs
src/session/: store.rs  types.rs
tests/: protocol.rs  provider_crud.rs
