[package]
name = "caldir-provider-proton"
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
description = "Proton Calendar provider for caldir"
license = "MIT"
repository = "https://github.com/t4t5/caldir-provider-proton"
homepage = "https://caldir.org"
keywords = ["calendar", "proton", "sync", "encryption"]
categories = ["command-line-utilities"]

[[bin]]
name = "caldir-provider-proton"
path = "src/main.rs"

[dependencies]
caldir-core = "0.11.2"
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "macros", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
toml = "1"
base64 = "0.22"
proton-srp = "0.8.2"
proton-crypto = { version = "0.12.1", default-features = false, features = ["rustpgp"] }
proton-crypto-account = { version = "0.18.1", default-features = false, features = ["rustpgp"] }

[dev-dependencies]
tempfile = "3"
hmac = "0.12"
sha1 = "0.10"
